--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity_tapping"></activity>
+        <activity android:name=".Main2Activity_mouth"></activity>
+        <activity android:name=".Main2Activity_role" />
+        <activity android:name=".Main2Activity_whisper" />
+        <activity android:name=".Main2Activity_tapping" />
         <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
